force-app/main/default/objects/Provider__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
    <description>Primary contact email address of the provider.</description>
</CustomField>