force-app/main/default/objects/Provider__c/fields/NPI__c.field-meta.xml
<CustomField>
    <fullName>NPI__c</fullName>
    <label>NPI</label>
    <type>Text</type>
    <length>10</length>
    <required>true</required>
    <unique>true</unique>
    <externalId>true</externalId>
    <description>National Provider Identifier - a unique 10-digit identification number for covered healthcare providers.</description>
</CustomField>