force-app/main/default/objects/Provider__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
    <description>Primary office phone number of the provider.</description>
</CustomField>