force-app/main/default/objects/Provider__c/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <label>Provider Type</label>
    <type>Picklist</type>
    <description>The specialty classification of the provider.</description>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary Care Physician</fullName>
                <default>true</default>
                <label>Primary Care Physician</label>
            </value>
            <value>
                <fullName>Specialist</fullName>
            </value>
            <value>
                <fullName>Dentist</fullName>
            </value>
            <value>
                <fullName>Therapist</fullName>
            </value>
            <value>
                <fullName>Nurse Practitioner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>