force-app/main/default/objects/Provider__c/fields/State_License_Number__c.field-meta.xml
<CustomField>
    <fullName>State_License_Number__c</fullName>
    <label>State License Number</label>
    <type>Text</type>
    <length>50</length>
    <description>The license number issued by the state medical board.</description>
</CustomField>