force-app/main/default/objects/Provider__c/validationRules/NPI_Must_Be_10_Digits.validationRule-meta.xml
<ValidationRule>
    <fullName>NPI_Must_Be_10_Digits</fullName>
    <active>true</active>
    <description>Ensures that the National Provider Identifier (NPI) is exactly 10 numerical digits.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(NPI__c)), NOT(REGEX(NPI__c, &quot;^[0-9]{10}$&quot;)))</errorConditionFormula>
    <errorMessage>NPI must be a unique 10-digit numeric value.</errorMessage>
    <errorDisplayField>NPI__c</errorDisplayField>
</ValidationRule>